--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/obinnaeye/image-search-api#readme",
   "dependencies": {
+    "ejs": "^2.5.5",
     "express": "^4.14.0",
-    "request": "^2.79.0"
+    "mongodb": "^2.2.16",
+    "pug": "^2.0.0-beta6",
+    "request": "^2.79.0",
+    "stylus": "^0.54.5"
   }
 }
