--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/obinnaeye/image-search-api#readme",
   "dependencies": {
+    "child_process": "^1.0.2",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
     "mongodb": "^2.2.16",
